04React Native开发工具WebStorm/webstorm执行run失败.txt
"D:\RN\WebStorm 2017.2.4\bin\runnerw.exe" D:\Node\nodejs\node.exe C:\Users\tong_\HelloWorldRN\index.android.js
C:\Users\tong_\HelloWorldRN\index.android.js:7
import React, { Component } from 'react';
^^^^^^

SyntaxError: Unexpected token import
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:389:7)
    at startup (bootstrap_node.js:149:9)

Process finished with exit code 1



D:\RN\workspace\HelloWorldRN>react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
Scanning 573 folders for symlinks in D:\RN\workspace\HelloWorldRN\node_modules (28ms)
Scanning 573 folders for symlinks in D:\RN\workspace\HelloWorldRN\node_modules (23ms)
Loading dependency graph, done.
bundle: start
bundle: finish
bundle: Writing bundle output to: android/app/src/main/assets/index.android.bundle
bundle: Done writing bundle output
